cmake_minimum_required(VERSION 3.25)
project(capture)

find_package(FlatBuffers REQUIRED)
find_package(OpenCV REQUIRED)

file(GLOB_RECURSE ${PROJECT_NAME}_src ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c)

add_library(${PROJECT_NAME} OBJECT ${${PROJECT_NAME}_src})

target_link_libraries(${PROJECT_NAME} PRIVATE ${OpenCV_LIBS})
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/inc)

#TODO::need to fix the code in websocket due to C++20
find_library(LZ4_LIB NAMES lz4 lz4.so lz4.so.1.9.2 PATHS /usr/lib /usr/lib/x86_64-linux-gnu /usr/local/lib NO_DEFAULT_PATH)
find_library(ZSTD_LIB NAMES zstd libzstd.so libzstd.so.1.4.4 PATHS /usr/lib /usr/lib/x86_64-linux-gnu /usr/local/lib NO_DEFAULT_PATH)

if(NOT LZ4_LIB)
        message(STATUS "Could not find lz4 in common locations, falling back to linker name 'lz4' (ensure system package is installed)")
        set(LZ4_LIB lz4)
endif()

if(NOT ZSTD_LIB)
        message(STATUS "Could not find zstd in common locations, falling back to linker name 'zstd' (ensure system package is installed)")
        set(ZSTD_LIB zstd)
endif()

target_link_libraries(
                                ${PROJECT_NAME} PRIVATE
                                ${LZ4_LIB}
                                ${ZSTD_LIB}
                                flatbuffers::flatbuffers
)
target_link_libraries(${PROJECT_NAME} PRIVATE utility)
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../utility/inc)

target_include_directories(${PROJECT_NAME} PRIVATE ../../config/autogenerated_flatbuffers)