cmake_minimum_required(VERSION 3.25)
project(detect)

if(NOT DEFINED OPENVINO_ROOT)
	# allow user to set OPENVINO_ROOT to the root of OpenVINO install
	set(OPENVINO_ROOT "/opt/intel/openvino_genai_ubuntu22_2025.0.0.0_x86_64/runtime" CACHE PATH "Root directory of OpenVINO runtime installation")
endif()

set(OPENVINO_INCLUDE_HINTS
	"${OPENVINO_ROOT}/include"
	"${OPENVINO_ROOT}/runtime/include"
	"/opt/intel/openvino_genai_ubuntu22_2025.0.0.0_x86_64/runtime/include"
)

find_path(OPENVINO_INCLUDE_DIR
	NAMES openvino/openvino.hpp
	HINTS ${OPENVINO_INCLUDE_HINTS}
)

find_library(OPENVINO_LIBRARY
	NAMES openvino libopenvino
	HINTS
		"${OPENVINO_ROOT}/lib"
		"${OPENVINO_ROOT}/lib/intel64"
		"/opt/intel/openvino_genai_ubuntu22_2025.0.0.0_x86_64/runtime/lib/intel64"
)

if(NOT OPENVINO_INCLUDE_DIR OR NOT OPENVINO_LIBRARY)
	message(WARNING "OpenVINO not found (include: ${OPENVINO_INCLUDE_DIR}, lib: ${OPENVINO_LIBRARY}).\nPlease install OpenVINO runtime or set -DOPENVINO_ROOT=/path/to/openvino before configuring.")
else()
	message(STATUS "Found OpenVINO include: ${OPENVINO_INCLUDE_DIR}")
	message(STATUS "Found OpenVINO lib: ${OPENVINO_LIBRARY}")
endif()

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")

file(GLOB_RECURSE ${PROJECT_NAME}_src ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c)

add_library(${PROJECT_NAME} OBJECT ${${PROJECT_NAME}_src})
target_compile_features(${PROJECT_NAME} PUBLIC c_std_99 cxx_std_20)

if(OPENVINO_INCLUDE_DIR)
	target_include_directories(${PROJECT_NAME} PUBLIC "${OPENVINO_INCLUDE_DIR}")
endif()
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/inc)

if(OPENVINO_LIBRARY)
	target_link_libraries(${PROJECT_NAME} PUBLIC "${OPENVINO_LIBRARY}")
endif()

target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../threads/inc)

target_link_libraries(${PROJECT_NAME} PRIVATE utility)
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../utility/inc)

target_include_directories(${PROJECT_NAME} PRIVATE ../../config/autogenerated_flatbuffers)